log
Wed, Mar 19, 2025  1:33:34 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sun, Mar 23, 2025  1:41:50 PM: 
 tests:  0|5
total_score: 0/70
72c35f2
Sun, Mar 23, 2025  1:47:47 PM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:50:7: error: implicit declaration of function 'pushback'; did you mean 'pushBack'? [-Werror=implicit-function-declaration]
   50 |       pushback(L, elem);
      |       ^~~~~~~~
      |       pushBack
cc1.exe: all warnings being treated as errors
Compilation failed
43ba3da
Sun, Mar 23, 2025  2:41:36 PM: 
 exercises.c | 25 +++++++++++++++++--------
 1 file changed, 17 insertions(+), 8 deletions(-)
 tests:  3|2
total_score: 40/70
e130ed7
